# simple_books_crude

./: .gitignore  README.md  compose.base.yml  compose.dev.yml  compose.prod.yml  compose.yml  dev.sh  prod.sh  updev.sh  upprod.sh
.github/workflows/: ci.yml
client/: .dockerignore  .env  .env.development  Dockerfile  Dockerfile.nginx  nginx.conf  package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/: BookForm.jsx  BookList.jsx
k8s/: 05-config.yml  06-secrets.yml  10-postgres.yml  20-api.yml  30-services.yml  99-smoke-job.yml  test-smoke.sh
server/: CMakeLists.txt  Dockerfile  b.sh  books.json  buildLinux.sh  clang-toolchain.cmake  rb.sh  rebuild.sh  run.sh
server/src/: main.cpp
